a bit dependency cleanup, added Application class to allow running console